# ant-haul

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  NEXT_STEPS_PROMPT.md  PIPELINE.md  PROJECT_STATUS.md  README.md  docker-compose.yml  install.sh  manifest.json  pyproject.toml  requirements.txt  supervisord.conf
_forge/: BUILD-STATE.json
_forge/prompts/: alerts-agent-iter0.md  (+130 more)
docs/: architecture.md  resolvers.md
ingestion/: backfill.py  backfill_discord_metadata.py  backfill_reactions.py  classifier.py  digest.py  discord_touch.py  enricher.py  express.py  file_scanner.py  loader.py  manifest.json  pipeline_worker.py  processor.py  run_watcher.py  signal_filter.py  submodule_adder.py  test_pipeline.py  threader.py  watcher.py
k8s/: neo4j.yaml
scripts/: batch_ingest.py  generate_index.py  lint_graph.py  load_batches.py  preseed_entities.py  query.py  rollback.py  synthesize.py
seed_storage/: __init__.py  api.py  circuit_breaker.py  config.py  cost_tracking.py  costs.py  dedup.py  digest.py  embeddings.py  extractor.py  graph.py  graphiti_client.py  health.py  launch_mcp.sh  mcp_server.py  notifications.py  rate_limiting.py  resolution.py  smoke_test.py  staging.py
tests/: conftest.py  journey_test.py  smoke_graphiti.py  smoke_test.py  test_classifier.py  test_discord_touch.py  test_enricher.py  test_express.py  test_file_scanner.py  test_loader.py  test_mcp_server.py  test_processor.py  test_signal_filter.py  test_staging.py  test_submodule_adder.py  test_threader.py  test_watcher.py
viz/: index.html  package-lock.json  package.json  vite.config.js
(+79 files in other folders)
